# M6

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/m6/: adaptive.yaml  csp.yaml  csp_copula.yaml  gaussian.yaml  historical.yaml  naive.yaml
src/m6/: __init__.py  cli.py  config.py  cv.py  data.py  evaluation.py  features.py  logging.py  metrics.py  scoring.py
src/m6/models/: __init__.py  adaptive.py  csp.py  csp_copula.py  ensemble.py  gaussian.py  historical.py  naive.py
src/m6/viz/: __init__.py  pipeline.py
tests/: conftest.py
tests/integration/: test_cv.py  test_models.py
tests/smoke/: test_imports.py  test_package.py
tests/unit/: test_data.py  test_evaluation.py  test_metrics.py  test_scoring.py
