[project]
name = "m6"
version = "0.1.0"
description = "Reproducible M6 Forecasting Uncertainty solution — Ranked Probability Score + Nixtla-style pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Rick Arko", email = "rick.arko17@gmail.com" }]
license = { text = "MIT" }
keywords = ["forecasting", "m6", "uncertainty", "rps", "financial", "time-series"]

dependencies = [
    # --- Financial data ----------------------------------------------
    "yfinance>=0.2.50",
    "pandas-datareader>=0.10",
    # --- ML / numerics ----------------------------------------------
    "numpy>=2.0",
    "pandas>=2.2,<3",
    "pyarrow>=18.0",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    # --- Plumbing ---------------------------------------------------
    "typer>=0.15",
    "loguru>=0.7.2",
    "python-dotenv>=1.0",
    "tqdm>=4.67",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # --- Plotting (light) -------------------------------------------
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[project.scripts]
m6 = "m6.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/m6"]

[tool.hatch.build.targets.sdist]
include = ["src/m6", "README.md", "AGENTS.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
    "types-tqdm>=4.67",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
    "pre-commit>=4.0",
]
notebook = [
    "jupyter>=1.1,<1.2",
    "ipykernel>=6.29.5,<7",
    "ipython>=8.31,<9",
    "jupyterlab>=4.3,<4.5",
    "notebook>=7.3,<7.5",
    "jupyter-server>=2.14,<2.17",
    "jupyter-client>=8.6,<8.7",
    "nbconvert>=7.16,<7.17",
    "pyzmq>=26,<27",
    "debugpy>=1.8,<1.9",
    "plotly>=5.24",
]
serve = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "prometheus-client>=0.21",
]

# ----------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PD", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "PD013", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "PD"]
"src/m6/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/m6"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "pandas_datareader.*",
]
follow_imports = "silent"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "smoke: Fast sanity checks — imports, CLI help, package metadata. Run on every save.",
    "unit: Pure-function tests for config, data shaping, evaluation, metrics.",
    "integration: End-to-end on toy data — models, cross-validation, pipeline.",
    "slow: Wall-clock > ~5s; skip in tight loops with `-m 'not slow'`.",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/m6"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
